[added][alfresco-promena-client] Module. Separated base for clients from alfresco-promena-message-broker-client

--- a/mm/alfresco-promena-message-broker-client/pom.xml
+++ b/mm/alfresco-promena-message-broker-client/pom.xml
@@ -2,29 +2,27 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
+
     <groupId>pl.beone.promena.alfresco.module</groupId>
     <artifactId>alfresco-promena-message-broker-client</artifactId>
-    <version>1.0-SNAPSHOT</version>
-    <name>[MM] alfresco-promena-message-broker-client</name>
-    <description>Platform/Repo JAR Module (to be included in the alfresco.war)</description>
+    <version>1.0.0</version>
     <packaging>jar</packaging>
 
+    <name>[MM] alfresco-promena-message-broker-client</name>
+
     <properties>
-        <kotlin.version>1.3.11</kotlin.version>
-<!--        <kotlin.compiler.incremental>true</kotlin.compiler.incremental>-->
-        <java.version>1.8</java.version>
+        <!--        <kotlin.compiler.incremental>true</kotlin.compiler.incremental>-->
+        <kotlin.version>1.3.31</kotlin.version>
+        <kotlinx-coroutines-core.version>1.2.1</kotlinx-coroutines-core.version>
+        <java.version>11</java.version>
 
-        <spring.version>5.1.3.RELEASE</spring.version>
+        <alfresco-promena-client.version>1.0.0</alfresco-promena-client.version>
+        <kryo-message-converter.version>1.0.0</kryo-message-converter.version>
 
-        <testcontainers.version>1.11.2</testcontainers.version>
-        <assertj.version>3.10.0</assertj.version>
-        <mockito-kotlin.version>2.1.0</mockito-kotlin.version>
         <!-- Alfresco Maven Plugin version to use -->
         <alfresco.sdk.version>4.0.0</alfresco.sdk.version>
 
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-
-        <promena-http-client.version>3.0.0-alpha</promena-http-client.version>
 
         <!-- Properties used in dependency declarations, you don't need to change these -->
         <alfresco.groupId>org.alfresco</alfresco.groupId>
@@ -39,6 +37,12 @@
         <!-- JRebel Hot reloading of classpath stuff and web resource stuff -->
         <jrebel.version>1.1.8</jrebel.version>
 
+        <mockk.version>1.9.3</mockk.version>
+        <spring.version>5.1.3.RELEASE</spring.version>
+        <testcontainers.version>1.11.2</testcontainers.version>
+        <kotlintest-runner-junit5.version>3.3.2</kotlintest-runner-junit5.version>
+        <logback-classic.version>1.2.3</logback-classic.version>
+
         <!-- Environment configuration properties -->
         <share.port>8180</share.port>
         <acs.host>alfresco-promena-message-broker-client-acs</acs.host>
@@ -48,6 +52,14 @@
         <!-- This parameter is only required for those cases in which ACS is not exposed in http://localhost:8080/alfresco (i.e. Windows Docker) -->
         <test.acs.endpoint.path></test.acs.endpoint.path>
 
+        <build-helper-maven-plugin.version>3.0.0</build-helper-maven-plugin.version>
+        <maven-source-plugin.version>3.0.1</maven-source-plugin.version>
+        <maven-assembly-plugin.version>2.6</maven-assembly-plugin.version>
+        <maven-resources-plugin.version>3.1.0</maven-resources-plugin.version>
+        <maven-dependency-plugin.version>3.1.1</maven-dependency-plugin.version>
+        <maven-jar-plugin.version>3.1.0</maven-jar-plugin.version>
+        <maven-failsafe-plugin.version>3.0.0-M1</maven-failsafe-plugin.version>
+        <yuicompressor-maven-plugin.version>1.5.1</yuicompressor-maven-plugin.version>
     </properties>
 
     <!-- Libs used in Unit and Integration tests -->
@@ -58,40 +70,22 @@
             <groupId>org.jetbrains.kotlin</groupId>
             <artifactId>kotlin-stdlib-jdk8</artifactId>
             <version>${kotlin.version}</version>
-            <!--<scope>provided</scope>-->
         </dependency>
-
         <dependency>
             <groupId>org.jetbrains.kotlinx</groupId>
             <artifactId>kotlinx-coroutines-core</artifactId>
-            <version>1.2.1</version>
+            <version>${kotlinx-coroutines-core.version}</version>
         </dependency>
 
-        <!--        <dependency>-->
-<!--            <groupId>org.springframework.boot</groupId>-->
-<!--            <artifactId>spring-boot-autoconfigure</artifactId>-->
-<!--            <version>2.1.4.RELEASE</version>-->
-<!--        </dependency>-->
-
         <dependency>
-            <groupId>pl.beone.promena.transformer</groupId>
-            <artifactId>promena-transformer-application-model</artifactId>
-            <version>3.0.0-alpha</version>
-        </dependency>
-        <dependency>
-            <groupId>pl.beone.promena.transformer</groupId>
-            <artifactId>promena-transformer-contract</artifactId>
-            <version>3.0.0-alpha</version>
-        </dependency>
-        <dependency>
-            <groupId>pl.beone.promena.transformer</groupId>
-            <artifactId>promena-transformer-internal</artifactId>
-            <version>3.0.0-alpha</version>
+            <groupId>pl.beone.promena.alfresco.module</groupId>
+            <artifactId>alfresco-promena-client</artifactId>
+            <version>${alfresco-promena-client.version}</version>
         </dependency>
         <dependency>
             <groupId>pl.beone.lib</groupId>
             <artifactId>kryo-message-converter</artifactId>
-            <version>1.0.0</version>
+            <version>${kryo-message-converter.version}</version>
             <exclusions>
                 <exclusion>
                     <groupId>org.springframework</groupId>
@@ -103,7 +97,11 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -121,36 +119,19 @@
         <dependency>
             <groupId>io.kotlintest</groupId>
             <artifactId>kotlintest-runner-junit5</artifactId>
-            <version>3.3.2</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>io.kotlintest</groupId>
-            <artifactId>kotlintest-extensions-spring</artifactId>
-            <version>3.3.2</version>
+            <version>${kotlintest-runner-junit5.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
-            <version>1.2.3</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.assertj</groupId>
-            <artifactId>assertj-core</artifactId>
-            <version>${assertj.version}</version>
+            <version>${logback-classic.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>io.mockk</groupId>
             <artifactId>mockk</artifactId>
-            <version>1.9.3</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.httpcomponents</groupId>
-            <artifactId>httpclient</artifactId>
+            <version>${mockk.version}</version>
             <scope>test</scope>
         </dependency>
 
@@ -168,6 +149,8 @@
             <version>${alfresco.sdk.version}</version>
             <scope>test</scope>
         </dependency>
+
+        <!-- TODO add module dependency to this-->
     </dependencies>
 
     <dependencyManagement>
@@ -240,6 +223,42 @@
                 </configuration>
             </plugin>
 
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>build-helper-maven-plugin</artifactId>
+                <version>${build-helper-maven-plugin.version}</version>
+                <executions>
+                    <execution>
+                        <id>add-source</id>
+                        <phase>generate-sources</phase>
+                        <goals>
+                            <goal>add-source</goal>
+                        </goals>
+                        <configuration>
+                            <sources>
+                                <source>${project.basedir}/src/main/kotlin</source>
+                                <source>${project.basedir}/src/main/java</source>
+                            </sources>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-source-plugin</artifactId>
+                <version>${maven-source-plugin.version}</version>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <id>attach-sources</id>
+                        <goals>
+                            <goal>jar-no-fork</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+
             <!--
                     Build an AMP if 3rd party libs are needed by the extensions
                     JARs are the default artifact produced in your modules, if you want to build an amp for each module
@@ -247,11 +266,10 @@
                     the layout of your AMP. The end result is that Maven will produce both a JAR file and an AMP with your
                     module.
                 -->
-            <!--
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-assembly-plugin</artifactId>
-                <version>2.6</version>
+                <version>${maven-assembly-plugin.version}</version>
                 <executions>
                     <execution>
                         <id>build-amp-file</id>
@@ -273,14 +291,13 @@
                     </dependency>
                 </dependencies>
             </plugin>
-            -->
 
             <!-- Filter the test resource files in the AIO parent project, and do property substitutions.
                  We need this config so this is done before the Alfresco Maven Plugin 'run' is executed. -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-resources-plugin</artifactId>
-                <version>3.1.0</version>
+                <version>${maven-resources-plugin.version}</version>
                 <configuration>
                     <encoding>UTF-8</encoding>
                     <nonFilteredFileExtensions> <!-- jpg, jpeg, gif, bmp and png are added automatically -->
@@ -433,7 +450,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-dependency-plugin</artifactId>
-                <version>3.1.1</version>
+                <version>${maven-dependency-plugin.version}</version>
                 <executions>
                     <!-- Copy the dependencies required for execute integration tests -->
                     <execution>
@@ -458,6 +475,7 @@
                             <outputDirectory>${project.build.directory}/extensions</outputDirectory>
                             <includeScope>runtime</includeScope>
                             <!-- IMPORTANT: if using amp dependencies only, add <includeTypes>amp</includeTypes> -->
+<!--                            <includeTypes>amp</includeTypes>-->
                         </configuration>
                     </execution>
                 </executions>
@@ -467,7 +485,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
-                <version>3.1.0</version>
+                <version>${maven-jar-plugin.version}</version>
                 <executions>
                     <execution>
                         <goals>
@@ -482,7 +500,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-failsafe-plugin</artifactId>
-                <version>3.0.0-M1</version>
+                <version>${maven-failsafe-plugin.version}</version>
                 <configuration>
                     <systemPropertyVariables>
                         <acs.endpoint.path>${test.acs.endpoint.path}</acs.endpoint.path>
@@ -517,7 +535,7 @@
             <plugin>
                 <groupId>net.alchim31.maven</groupId>
                 <artifactId>yuicompressor-maven-plugin</artifactId>
-                <version>1.5.1</version>
+                <version>${yuicompressor-maven-plugin.version}</version>
                 <executions>
                     <!-- Compress the JS files under the assembly folder -->
                     <execution>
@@ -632,6 +650,32 @@
                             <source>1.8</source>
                             <target>1.8</target>
                         </configuration>
+                        <executions>
+                            <!-- Replacing default-compile as it is treated specially by maven -->
+                            <execution>
+                                <id>default-compile</id>
+                                <phase>none</phase>
+                            </execution>
+                            <!-- Replacing default-testCompile as it is treated specially by maven -->
+                            <execution>
+                                <id>default-testCompile</id>
+                                <phase>none</phase>
+                            </execution>
+                            <execution>
+                                <id>java-compile</id>
+                                <phase>compile</phase>
+                                <goals>
+                                    <goal>compile</goal>
+                                </goals>
+                            </execution>
+                            <execution>
+                                <id>java-test-compile</id>
+                                <phase>test-compile</phase>
+                                <goals>
+                                    <goal>testCompile</goal>
+                                </goals>
+                            </execution>
+                        </executions>
                     </plugin>
                 </plugins>
             </build>
@@ -650,6 +694,32 @@
                         <configuration>
                             <release>11</release>
                         </configuration>
+                        <executions>
+                            <!-- Replacing default-compile as it is treated specially by maven -->
+                            <execution>
+                                <id>default-compile</id>
+                                <phase>none</phase>
+                            </execution>
+                            <!-- Replacing default-testCompile as it is treated specially by maven -->
+                            <execution>
+                                <id>default-testCompile</id>
+                                <phase>none</phase>
+                            </execution>
+                            <execution>
+                                <id>java-compile</id>
+                                <phase>compile</phase>
+                                <goals>
+                                    <goal>compile</goal>
+                                </goals>
+                            </execution>
+                            <execution>
+                                <id>java-test-compile</id>
+                                <phase>test-compile</phase>
+                                <goals>
+                                    <goal>testCompile</goal>
+                                </goals>
+                            </execution>
+                        </executions>
                     </plugin>
                 </plugins>
             </build>
