--- a/mm/alfresco-promena-message-broker-client/docker/docker-compose.yml
+++ b/mm/alfresco-promena-message-broker-client/docker/docker-compose.yml
@@ -62,6 +62,11 @@ services:
       - alfresco-promena-message-broker-client-activemq-log-volume:/var/log/activemq
       - alfresco-promena-message-broker-client-activemq-data-volume:/opt/activemq/data
 
+  promena:
+    image: promena-executable:3.0.0-alpha
+    environment:
+      - "spring.activemq.broker-url=failover:(nio://activemq:61616)?timeout=3000&jms.useCompression=true"
+
 volumes:
   alfresco-promena-message-broker-client-acs-volume:
     external: true
