--- a/mm/alfresco-promena-client/src/main/resources/alfresco/module/alfresco-promena-client/alfresco-global.properties
+++ b/mm/alfresco-promena-client/src/main/resources/alfresco/module/alfresco-promena-client/alfresco-global.properties
@@ -1,5 +1,3 @@
-## This Alfresco Platform Configuration file should be used for custom properties that are introduced by this module.
-## Define default values for all properties here.
-## System Administrators can override these values in environment specific configurations in
-## alfresco/tomcat/shared/classes/alfresco-global.properties.
-## 
+promena.communication.file.location=
+
+promena.transformation.saveIfZero=true
