[improved][promena-connector-http] Rewritten HTTP connector using WebFlux [fixed][all] Added "classpath:" to all PropertySource without this prefix [improved][promena-parent] Updated SpringBoot to 2.1.5

--- a/extension/connector/http/delivery/promena-connector-http-delivery-http/pom.xml
+++ b/extension/connector/http/delivery/promena-connector-http-delivery-http/pom.xml
@@ -25,13 +25,19 @@
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
+            <artifactId>spring-boot-starter-webflux</artifactId>
         </dependency>
 
         <dependency>
             <groupId>com.fasterxml.jackson.module</groupId>
             <artifactId>jackson-module-kotlin</artifactId>
             <version>${jackson.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>io.projectreactor</groupId>
+            <artifactId>reactor-test</artifactId>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 </project>
