[improved][alfresco-promena-client] Renamed common properties [improved][alfresco-promena-client] AlfrescoPromenaService transformAsync returns Mono<List<NodeRef>> now (project reactor) [added][alfresco-promena-client] Project reactor core

--- a/mm/alfresco-promena-client/src/main/resources/alfresco/module/alfresco-promena-client/alfresco-global.properties
+++ b/mm/alfresco-promena-client/src/main/resources/alfresco/module/alfresco-promena-client/alfresco-global.properties
@@ -1,3 +1,10 @@
-promena.communication.file.location=
+# 100MB
+promena.client.serializer.kryo.bufferSize=104857600
 
-promena.transformation.saveIfZero=true
+promena.client.communication.file.location=
+
+promena.client.transformation.error.retry.enabled=true
+promena.client.transformation.error.retry.maxAttempts=5
+promena.client.transformation.error.retry.nextAttemptDelay=10s
+
+promena.client.transformation.saveIfZero=true
