--- a/mm/alfresco-promena-client/pom.xml
+++ b/mm/alfresco-promena-client/pom.xml
@@ -14,7 +14,10 @@
         <kotlin.version>1.3.31</kotlin.version>
         <java.version>11</java.version>
 
+        <promena-core.version>3.0.0-alpha</promena-core.version>
         <promena-transformer.version>3.0.0-alpha</promena-transformer.version>
+
+        <reactor-core.version>3.2.10.RELEASE</reactor-core.version>
 
         <!-- Alfresco Maven Plugin version to use -->
         <alfresco.sdk.version>4.0.0</alfresco.sdk.version>
@@ -66,6 +69,11 @@
         </dependency>
 
         <dependency>
+            <groupId>pl.beone.promena.core</groupId>
+            <artifactId>promena-core-internal</artifactId>
+            <version>${promena-core.version}</version>
+        </dependency>
+        <dependency>
             <groupId>pl.beone.promena.transformer</groupId>
             <artifactId>promena-transformer-internal</artifactId>
             <version>${promena-transformer.version}</version>
@@ -75,6 +83,12 @@
                     <artifactId>slf4j-api</artifactId>
                 </exclusion>
             </exclusions>
+        </dependency>
+
+        <dependency>
+            <groupId>io.projectreactor</groupId>
+            <artifactId>reactor-core</artifactId>
+            <version>${reactor-core.version}</version>
         </dependency>
 
         <dependency>
